fix(#7)/order service 조회, 삭제 수정